--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
 
     <dimen name="text_input_height">45dp</dimen>
     <dimen name="home_book_height">300dp</dimen>
+    <dimen name="home_page_title_height">50dp</dimen>
 </resources>
