--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,22 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item>
+        <!--<item name="android:actionBarStyle">@style/TransparentActionBar</item>-->
     </style>
+
+    <!--<style name="TransparentActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">-->
+        <!--<item name="android:background">@android:color/transparent</item>-->
+        <!--<item name="android:windowActionBarOverlay">true</item>-->
+        <!--<item name="windowActionBarOverlay">true</item>-->
+    <!--</style>-->
 
     <style name="FlatButton" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/flat_button</item>
         <item name="android:minWidth">0dp</item>
+        <item name="android:paddingLeft">@dimen/spacing_base</item>
+        <item name="android:paddingRight">@dimen/spacing_base</item>
     </style>
 
     <style name="FlatButton.NoPadding" >
