Préparation du système de filtrage

--- a/app/src/main/res/layout/activity_witchspells_path_chooser.xml
+++ b/app/src/main/res/layout/activity_witchspells_path_chooser.xml
@@ -8,61 +8,65 @@
         <variable
             name="model"
             type="fr.enlight.anima.animamagiccards.views.viewmodels.RecyclerViewModel" />
+
         <variable
             name="listener"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsMainPathChooserListener"/>
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsMainPathChooserListener" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/witchspells_book_background"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/spacing_base"
-        android:paddingRight="@dimen/spacing_base">
+        android:background="@drawable/witchspells_book_background">
 
-        <TextView
-            android:id="@+id/main_path_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_large"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?actionBarSize"
             android:gravity="center"
-            android:padding="@dimen/spacing_base"
-            android:text="@string/Witchspells_Choose_Main_Path"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:paddingLeft="@dimen/spacing_base"
+            android:paddingRight="@dimen/spacing_base">
 
-        <Button
-            android:id="@+id/main_path_validation_button"
-            style="@style/FlatButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Common_Validate"
-            android:onClick="@{() -> listener.onValidationClicked()}"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="@dimen/spacing_large"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            <TextView
+                android:id="@+id/main_path_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_large"
+                android:gravity="center"
+                android:padding="@dimen/spacing_base"
+                android:text="@string/Witchspells_Choose_Main_Path"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layoutManager="@{model.layoutManager}"
-            android:layout_marginTop="@dimen/spacing_base"
-            android:layout_marginBottom="@dimen/spacing_base"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/main_path_validation_button"
-            app:layout_constraintTop_toBottomOf="@id/main_path_title"
-            app:viewModels="@{model.viewModels}" />
+            <Button
+                android:id="@+id/main_path_validation_button"
+                style="@style/FlatButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_large"
+                android:onClick="@{() -> listener.onValidationClicked()}"
+                android:text="@string/Common_Validate"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/spacing_base"
+                android:layout_marginTop="@dimen/spacing_base"
+                app:layoutManager="@{model.layoutManager}"
+                app:layout_constraintBottom_toTopOf="@id/main_path_validation_button"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/main_path_title"
+                app:viewModels="@{model.viewModels}" />
 
-    </android.support.constraint.ConstraintLayout>
-
+        </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 </layout>
