--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/status_bar_height"
+        android:layout_marginTop="?actionBarSize"
         tools:context=".ui.HomePageActivity" />
 
 </LinearLayout>
