--- a/app/src/main/res/layout/activity_spells_stack.xml
+++ b/app/src/main/res/layout/activity_spells_stack.xml
@@ -14,30 +14,37 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:theme="@style/TransparentActionBar" />-->
+
         <include
             android:id="@+id/loading_overlay"
             layout="@layout/view_spellbook_loading"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:model="@{model.spellbookModel}"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="visible"/>
+            app:model="@{model.spellbookModel}" />
 
         <com.loopeer.cardstack.CardStackView
             android:id="@+id/card_stack_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/spacing_large"
+            android:layout_marginRight="@dimen/spacing_large"
+            android:background="@android:color/transparent"
+            app:expandListener="@{model.expandListener}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="@dimen/spacing_big"
-            app:viewModels="@{model.viewModels}"
-            app:expandListener="@{model.expandListener}"/>
+            app:viewModels="@{model.viewModels}" />
 
     </android.support.constraint.ConstraintLayout>
 
