--- a/app/src/main/res/layout/activity_witchspells_edition.xml
+++ b/app/src/main/res/layout/activity_witchspells_edition.xml
@@ -3,125 +3,118 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="model"
             type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsEditionViewModel" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/spacing_xbig"
         android:background="@drawable/witchspells_book_background">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/left_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.12" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?actionBarSize"
+            android:paddingBottom="@dimen/spacing_xbig">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/right_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.92" />
-
-        <Button
-            android:id="@+id/witchspells_modify_button"
-            style="@style/FlatButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Common_Modify"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/textSize_large"
-            android:onClick="@{() -> model.onModifyClicked()}"
-            setVisible="@{!model.pathGroupViewModels.empty}"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/witchspells_validation_button" />
-
-        <Button
-            android:id="@+id/witchspells_validation_button"
-            style="@style/FlatButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Common_Validate"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/textSize_large"
-            android:onClick="@{() -> model.onValidateClicked()}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/witchspells_modify_button"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="45dp"
-            app:layout_constraintBottom_toTopOf="@id/witchspells_validation_button"
-            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
-            app:layout_constraintRight_toRightOf="@id/right_guideline"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <android.support.constraint.Guideline
+                android:id="@+id/left_guideline"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.12" />
 
-                <TextView
+            <android.support.constraint.Guideline
+                android:id="@+id/right_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.92" />
+
+            <Button
+                android:id="@+id/witchspells_modify_button"
+                style="@style/FlatButton"
+                setVisible="@{!model.pathGroupViewModels.empty}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{() -> model.onModifyClicked()}"
+                android:text="@string/Common_Modify"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/textSize_large"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/witchspells_validation_button" />
+
+            <Button
+                android:id="@+id/witchspells_validation_button"
+                style="@style/FlatButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{() -> model.onValidateClicked()}"
+                android:text="@string/Common_Validate"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/textSize_large"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/witchspells_modify_button"
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/witchspells_validation_button"
+                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+                app:layout_constraintRight_toRightOf="@id/right_guideline"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/Witchspells_Name_Label"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp" />
-
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/witchspells_name_textinput"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/text_input_height"
-                    android:layout_marginLeft="@dimen/spacing_big"
-                    android:layout_marginRight="@dimen/spacing_big">
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/witchspells_name_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/text_input_height"
+                        android:layout_marginTop="@dimen/spacing_large"
+                        android:layout_marginLeft="@dimen/spacing_big"
+                        android:layout_marginRight="@dimen/spacing_big"
                         android:gravity="center_horizontal"
+                        android:hint="@string/Witchspells_Name_Label"
                         android:inputType="text"
-                        android:textSize="@dimen/textSize_xbig"
                         android:text="@={model.witchName}"
                         android:textColor="@android:color/white"
+                        android:textSize="@dimen/textSize_xbig"
                         app:customFont="@{@string/spell_title_font}" />
 
-                </android.support.design.widget.TextInputLayout>
+                    <LinearLayout
+                        android:id="@+id/witchspells_container_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_large"
+                        android:orientation="vertical"
+                        app:viewModels="@{model.pathGroupViewModels}" />
 
-                <LinearLayout
-                    android:id="@+id/witchspells_container_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_large"
-                    android:orientation="vertical"
-                    app:viewModels="@{model.pathGroupViewModels}" />
+                </LinearLayout>
+            </ScrollView>
 
-            </LinearLayout>
-        </ScrollView>
+            <include
+                android:id="@+id/witchspells_add_path_layout"
+                layout="@layout/view_witchspells_add_path_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:visibility="@{model.pathGroupViewModels.size() == 0 ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+                app:layout_constraintRight_toRightOf="@id/right_guideline"
+                app:layout_constraintTop_toTopOf="parent"
+                app:model="@{model.addPathViewModel}" />
 
-        <include
-            android:id="@+id/witchspells_add_path_layout"
-            layout="@layout/view_witchspells_add_path_item"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:model="@{model.addPathViewModel}"
-            android:visibility="@{model.pathGroupViewModels.size() == 0 ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
-            app:layout_constraintRight_toRightOf="@id/right_guideline"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 </layout>
