--- a/app/src/main/res/layout/fragment_witchspells_secondary_path_chooser.xml
+++ b/app/src/main/res/layout/fragment_witchspells_secondary_path_chooser.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/witchspells_book_background"
+        android:background="@drawable/other_book_background"
         android:gravity="center"
         android:padding="@dimen/spacing_large"
         android:orientation="vertical">
