--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,21 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
-        <!--<item name="android:actionBarStyle">@style/TransparentActionBar</item>-->
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="android:actionBarStyle">@style/TransparentActionBar</item>
+
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/TransparentActionBar</item>
     </style>
 
-    <!--<style name="TransparentActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">-->
-        <!--<item name="android:background">@android:color/transparent</item>-->
-        <!--<item name="android:windowActionBarOverlay">true</item>-->
-        <!--<item name="windowActionBarOverlay">true</item>-->
-    <!--</style>-->
+    <style name="TransparentActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
+
+        <!-- Support library compatibility -->
+        <item name="background">@android:color/transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+    </style>
 
     <style name="FlatButton" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/flat_button</item>
