--- a/app/src/main/res/layout/activity_spells_stack.xml
+++ b/app/src/main/res/layout/activity_spells_stack.xml
@@ -14,12 +14,6 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--app:theme="@style/TransparentActionBar" />-->
-
         <include
             android:id="@+id/loading_overlay"
             layout="@layout/view_spellbook_loading"
@@ -29,8 +23,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:model="@{model.spellbookModel}" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.loopeer.cardstack.CardStackView
             android:id="@+id/card_stack_view"
