--- a/app/src/main/res/layout/view_spellbook_loading.xml
+++ b/app/src/main/res/layout/view_spellbook_loading.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-        <variable
-            name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.SpellbookViewModel" />
-    </data>
-
-    <android.support.constraint.ConstraintLayout
+<layout>
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/spacing_big">
@@ -26,30 +18,17 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/spellbook_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/spell_card_background"
-            app:layout_constraintBottom_toBottomOf="@id/spell_card_background"
-            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
-            app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:layout_constraintVertical_bias="0.6"
-            android:layout_marginTop="@dimen/spacing_base"
-            android:src="@{model.getSpellbookIcon(context)}"
-            tools:src="@drawable/card_icon_book_light" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            app:layout_constraintBottom_toTopOf="@id/spellbook_icon"
-            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
-            app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:customFont="@{@string/technical_font}"
-            android:text="@string/Common_Loading_Message"
             android:layout_marginBottom="@dimen/spacing_large"
-            android:textSize="40sp" />
+            android:text="@string/Common_Loading_Message"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
+            app:layout_constraintRight_toRightOf="@id/spell_card_background" />
 
 
     </android.support.constraint.ConstraintLayout>
