--- a/app/src/main/res/layout/view_witchspells_book_item.xml
+++ b/app/src/main/res/layout/view_witchspells_book_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -12,7 +12,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/home_book_height">
+        android:layout_height="@dimen/home_book_height"
+        android:onClick="@{() -> model.onBookClicked()}">
 
         <ImageView
             android:id="@+id/witchspells_background"
@@ -29,34 +30,35 @@
             android:id="@+id/witchspells_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/spacing_large"
+            android:paddingTop="@dimen/spacing_large"
+            android:text="@{@string/Witchspells_Name_Format(model.witchName)}"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/textSize_big"
+            app:customFont="@{@string/spell_title_font}"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
             app:layout_constraintRight_toRightOf="@id/witchspells_background"
-            app:customFont="@{@string/spell_title_font}"
-            android:gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textSize="@dimen/textSize_big"
-            android:paddingTop="@dimen/spacing_large"
-            android:paddingBottom="@dimen/spacing_large"
-            android:textColor="@android:color/white"
-            android:text="@{@string/Witchspells_Name_Format(model.witchName)}"
-            tools:text="Sorts de Célia"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Sorts de Célia" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/witchspells_container_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> model.onBookClicked()}"
+            android:paddingEnd="@dimen/spacing_xlarge"
             android:paddingLeft="@dimen/spacing_xlarge"
             android:paddingRight="@dimen/spacing_xlarge"
             android:paddingStart="@dimen/spacing_xlarge"
-            android:paddingEnd="@dimen/spacing_xlarge"
+            app:layoutManager="@{model.layoutManager}"
+            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
             app:layout_constraintRight_toRightOf="@id/witchspells_background"
             app:layout_constraintTop_toBottomOf="@+id/witchspells_name"
-            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
-            app:layoutManager="@{model.layoutManager}"
-            app:viewModels="@{model.viewModels}"/>
+            app:viewModels="@{model.viewModels}" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
