Intégration du système de filtrage (reste animation et tests)

--- a/app/src/main/res/layout/dialog_spell_effect.xml
+++ b/app/src/main/res/layout/dialog_spell_effect.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.DialogSpellEffectViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.DialogSpellEffectViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
