--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.DialogSpellGradeViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.DialogSpellGradeViewModel" />
     </data>
 
     <LinearLayout
