--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -11,12 +11,13 @@
 
         <variable
             name="bookModel"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.BookSubviewViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.BookSubviewViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize">
 
         <TextSwitcher
             android:id="@+id/spellbook_title_switcher"
