--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -3,10 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <import type="android.view.View"/>
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.SpellStackViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.SpellStackViewModel" />
+        <variable
+            name="filterModel"
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.SpellFilterViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -17,9 +20,12 @@
         <include
             android:id="@+id/loading_overlay"
             layout="@layout/view_spellbook_loading"
+            android:layout_marginTop="?actionBarSize"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="visible"
+            android:layout_marginLeft="@dimen/spell_margins"
+            android:layout_marginRight="@dimen/spell_margins"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,8 +35,9 @@
             android:id="@+id/card_stack_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/spacing_large"
-            android:layout_marginRight="@dimen/spacing_large"
+            android:layout_marginTop="?actionBarSize"
+            android:layout_marginLeft="@dimen/spell_margins"
+            android:layout_marginRight="@dimen/spell_margins"
             android:background="@android:color/transparent"
             app:expandListener="@{model.expandListener}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +45,9 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:viewModels="@{model.viewModels}" />
+
+        <include layout="@layout/view_spells_filters"
+            app:model="@{filterModel}"/>
 
     </android.support.constraint.ConstraintLayout>
 
