--- a/app/src/main/res/layout/view_spell_grade_item.xml
+++ b/app/src/main/res/layout/view_spell_grade_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.SpellGradeViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.SpellGradeViewModel" />
     </data>
 
     <LinearLayout
