--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="home_book_height">300dp</dimen>
     <dimen name="home_page_title_height">50dp</dimen>
     <dimen name="spell_card_margin">@dimen/spacing_large</dimen>
+    <dimen name="spell_margins">@dimen/spacing_large</dimen>
 </resources>
