Correction de bugs sur l'animation des filters, changements sur la toolbar, correction sur les checkbox de type

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -16,8 +16,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_height="match_parent">
 
         <TextSwitcher
             android:id="@+id/spellbook_title_switcher"
