--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -20,19 +21,34 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
-
-        <include
-            android:id="@+id/loading_overlay"
-            layout="@layout/view_spellbook_loading"
+        <ImageView
+            android:id="@+id/spell_card_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginLeft="@dimen/spell_margins"
             android:layout_marginRight="@dimen/spell_margins"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/card_verso"
+            app:layout_constraintDimensionRatio="H,161:225"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:setVisible="@{!model.stackVisible || model.messageMode}" />
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/spacing_xbig"
+            android:text="@{model.messageMode ? @string/Spell_Empty_List_Message : @string/Common_Loading_Message}"
+            android:textSize="40sp"
+            android:gravity="center"
+            app:customFont="@{@string/technical_font}"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
+            app:layout_constraintRight_toRightOf="@id/spell_card_background"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/Spell_Empty_List_Message"
+            app:setVisible="@{!model.stackVisible || model.messageMode}" />
 
         <com.loopeer.cardstack.CardStackView
             android:id="@+id/card_stack_view"
