--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -37,27 +37,29 @@
         <TextView
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:paddingBottom="@dimen/spacing_xbig"
             android:text="@{model.messageMode ? @string/Spell_Empty_List_Message : @string/Common_Loading_Message}"
-            android:textSize="40sp"
-            android:gravity="center"
-            app:customFont="@{@string/technical_font}"
             android:textColor="@android:color/black"
+            android:textSize="40sp"
+            app:customFont="@{@string/technical_font}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/Spell_Empty_List_Message"
-            app:setVisible="@{!model.stackVisible || model.messageMode}" />
+            app:setVisible="@{!model.stackVisible || model.messageMode}"
+            tools:text="@string/Spell_Empty_List_Message" />
 
-        <com.loopeer.cardstack.CardStackView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/card_stack_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginLeft="@dimen/spell_margins"
             android:layout_marginRight="@dimen/spell_margins"
             android:background="@android:color/transparent"
-            app:expandListener="@{model.expandListener}"
+            app:addOnScrollListener="@{model.onScrollListener}"
+            app:hasFixedSize="@{true}"
+            app:layoutManager="@{model.layoutManager}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
