--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -14,22 +14,39 @@
         <variable
             name="filterModel"
             type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.SpellFilterViewModel" />
+
+        <variable
+            name="quickAccessModel"
+            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.quickaccess.SpellQuickAccessViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="@dimen/spacing_base"
         android:background="@android:color/transparent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/quick_access_recycler_view"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginBottom="@dimen/spacing_xbig"
+            app:setVisible="@{quickAccessModel != null}"
+            app:layoutManager="@{quickAccessModel.layoutManager}"
+            app:viewModels="@{quickAccessModel.viewModels}"/>
 
         <ImageView
             android:id="@+id/spell_card_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/spell_margins"
-            android:layout_marginRight="@dimen/spell_margins"
+            app:layout_marginLeft="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_small}"
+            app:layout_marginRight="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_small}"
             android:src="@drawable/card_verso"
             app:layout_constraintDimensionRatio="H,161:225"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/quick_access_recycler_view"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:setVisible="@{!model.stackVisible || model.messageMode}" />
@@ -54,8 +71,8 @@
             android:id="@+id/card_stack_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/spell_margins"
-            android:layout_marginRight="@dimen/spell_margins"
+            app:layout_marginLeft="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_small}"
+            app:layout_marginRight="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_small}"
             android:background="@android:color/transparent"
             app:expandListener="@{model.expandListener}"
             app:layout_constraintBottom_toBottomOf="parent"
